<?xml version="1.0"?>
<package format="2">

    <name>zeabus_fusion</name>
    <version>0.0.0</version>
    <description>This package purpose to fusion sensor to get new or better data</description>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
