<?xml version="1.0"?>
<package format="2">

    <name>zeabus_localize</name>
    <version>0.0.0</version>
    <description>This package purpose to fusion sensor to get new or better data</description>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>

    <build_depend>tf</build_depend>
    <exec_depend>tf</exec_depend>

    <build_depend>nav_msgs</build_depend>
    <exec_depend>nav_msgs</exec_depend>

    <build_depend>zeabus_utility</build_depend>
    <exec_depend>zeabus_utility</exec_depend>

    <build_depend>zeabus_library</build_depend>
    <exec_depend>zeabus_library</exec_depend>

    <build_depend>dynamic_reconfigure</build_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>

    <build_depend>Boost</build_depend>
    <exec_depend>Boost</exec_depend>

    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>

</package>
